Nougat MR1: Advanced restart menu
Based loosely on this commit: https://github.com/krexus/android_frameworks_base/commit/63284a9d6e98fedfd93c1a5bd24a736f942e3d51
and on the "Add restart to GlobalActions" commit by Nougat-MR1
by @KreAch3R

Including
* Fixes to longpress behavior
* Removal of "soft-reboot"
* Restart option is now fixed and can't be removed (only the advanced menu can be toggled)
* Removed longpress "reboot to safe mode" from power menu (left it only on restart)
* Enabled confirm on new Restart code

Change-Id: Ibce551a4898080ef7f150b566b53a40a8a14277f

--- a/core/res/res/values/vanilla_symbols.xml
+++ b/core/res/res/values/vanilla_symbols.xml
@@ -26,4 +26,12 @@
   <java-symbol type="integer" name="config_notificationsBatteryReallyFullARGB" />
   <java-symbol type="array" name="notification_light_package_mapping" />
   <java-symbol type="array" name="config_notificationNoAlertsVibePattern" />
+
+  <!-- Advanced Power menu w/ restart options -->
+  <java-symbol type="array" name="shutdown_reboot_options" />
+  <java-symbol type="array" name="shutdown_reboot_actions" />
+  <java-symbol type="string" name="reboot_title" />
+  <java-symbol type="string" name="reboot_confirm" />
+  <java-symbol type="string" name="reboot_progress" />
+
 </resources>
