--- a/core/res/res/values/vanilla_config.xml
+++ b/core/res/res/values/vanilla_config.xml
@@ -28,6 +28,9 @@
 	
     <string name="default_dialer_application" translatable="false">com.android.dialer</string>
 
+    <!-- Default value for led color when battery is really fully charged -->
+    <integer name="config_notificationsBatteryReallyFullARGB">0xFF0000FF</integer>
+
     <!-- Does the notification LED support multiple colors -->
     <bool name="config_multiColorNotificationLed">false</bool>
 
