--- a/core/res/res/values/vanilla_strings.xml
+++ b/core/res/res/values/vanilla_strings.xml
@@ -5,7 +5,6 @@
     <!-- Vendor mismatched fingerprint warning [CHAR LIMIT=NONE] -->
     <string name="system_error_vendorprint">Your vendor image does not match the system. Please flash the <xliff:g id="string">%s</xliff:g> vendor image for your device</string>
 
-	
     <!-- Reboot menu -->
     <!-- Reboot Progress Dialog. This is shown if the user chooses to reboot the phone. -->
     <string name="reboot_title">@string/global_action_restart</string>
@@ -18,5 +17,8 @@
     <string name="reboot_recovery">Recovery</string>
     <!-- Button to restart the phone into bootloader, within the Restart Options dialog -->
     <string name="reboot_bootloader">Bootloader</string>
+
+    <!-- Long-press back kill application -->
+    <string name="app_killed_message">Application killed</string>
 
 </resources>
