Show a more descriptive message when vendor.img is out of date

--- a/core/res/res/values/vanilla_strings.xml
+++ b/core/res/res/values/vanilla_strings.xml
@@ -2,6 +2,9 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Vendor mismatched fingerprint warning [CHAR LIMIT=NONE] -->
+    <string name="system_error_vendorprint">It appears your vendor image may be out of date. Please flash the latest vendor image for your device.</string>
+	
     <!-- Reboot menu -->
     <!-- Reboot Progress Dialog. This is shown if the user chooses to reboot the phone. -->
     <string name="reboot_title">@string/global_action_restart</string>
