--- a/core/res/res/values/vanilla_symbols.xml
+++ b/core/res/res/values/vanilla_symbols.xml
@@ -39,4 +39,8 @@
 
   <!-- Quick settings tiles columns and rows config -->
   <java-symbol type="integer" name="config_qs_num_rows_landscape_default"/>
+    
+  <!-- Screen Recording -->
+  <java-symbol type="bool" name="config_enableScreenrecordChord" />
+    
 </resources>
