--- a/packages/SystemUI/res/values/vanilla_strings.xml
+++ b/packages/SystemUI/res/values/vanilla_strings.xml
@@ -41,9 +41,12 @@
     <string name="omnijaws_current_text">Now</string>
     <string name="omnijaws_package_not_available">OmniJaws not available</string>
     
+    <!-- Cunt Strings-->
     <string name="pirate_label">Fucky Snatcher CUNT</string>
     <string name="pirate_spec">pirate</string>
     
+    <!-- Screenshots -->
+    <string name="quick_settings_screenshot_label">Screenshot</string>
     <!-- Screenrecord Notification Ticker -->
     <string name="screenrecord_notif_ticker">Screen is being recorded</string>
     <!-- Screenrecord notification title -->
