Expanded Desktop QS Tile
PureNexus Edits:
*Adapt for Nougat

--- a/packages/SystemUI/res/values/vanilla_strings.xml
+++ b/packages/SystemUI/res/values/vanilla_strings.xml
@@ -14,6 +14,9 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Expanded Desktop QS Tile -->
+    <string name="quick_settings_expanded_desktop">Expanded</string>
+    <string name="quick_settings_expanded_desktop_off">Normal</string>
     <!-- Navbar tuner -->
     <string name="navbar_tuner_title">Navigation bar tuner</string>
     <!-- statusbar items tuner -->
