[1/2] frameworks/base: Battery and Notification Lights
        Pulled together from:

        Author: Roman Birg <roman@cyngn.com>
        Date:   Wed Jul 15 13:27:02 2015 -0700
        framework: add config_ledCanPulse overlay setting
        Some devices do not support pulsing LEDs. Allow them to hide pulse
        settings.

        Author: Roman Birg <roman@cyngn.com>
        Date:   Wed Dec 23 14:02:52 2015 -0800
        NotificationManager: always restore identity on notification error
        Change-Id: I3fb369c34098c366c3c943da0d7c7c64127387c8
        Signed-off-by: Roman Birg <roman@cyngn.com>

        Author: Steve Kondik <steve@cyngn.com>
        Date:   Sat Nov 7 17:58:42 2015 -0800
        noman: Fix AIOOB
        Change-Id: I6284b8f860a7792b75531fe648ff967b6f78ab6a

        Author: Altaf-Mahdi <altaf.mahdi@gmail.com>
        Date:   Sat Nov 7 17:48:01 2015 +0000
        notificationmanager: dont clear LED when its forced on by Settings
        LED is cleared when swiping the panel down to view notifications,
        keep the light on if it has been forced on by Settings app.
        Change-Id: I9c4f4c3928c8217737c5df18fa5251a539e1ba03

        Author: LuK1337 <priv.luk@gmail.com>
        Date:   Thu Oct 29 19:57:25 2015 +0100
        NotificationManager: Allow Settings app to publish a notifications without icon
        We need that for notification light settings.
        Change-Id: Id0984656fa4e071b7dfa3f88caa6c2ac01e6cce4

        Author: DvTonder <david.vantonder@gmail.com>
        Author: Ricardo Cerqueira <cyanogenmod@cerqueira.org>
        Date:   Mon Nov 4 00:57:51 2013 +0000
        Framework: Port CM9 features to CM10
        Change-Id: Ibd63116df90b06f6ce6adb8a0343059bbb999bfb

        Author: Pawit Pornkitprasan <p.pawit@gmail.com>
        Date:   Sun Dec 8 15:24:41 2013 +0700
        BatteryService: fix FC on boot until battery stat is present
        updateLightsLocked() can be called from CM's added SettingsObserver
        when battery 

--- a/core/res/res/values/vanilla_config.xml
+++ b/core/res/res/values/vanilla_config.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-<<<<<<< HEAD
-     Copyright (C) 2016 Krexus
-	 Copyright (C) 2017 VanillaNexus
-=======
     Copyright (C) 2016 Krexus
 	Copyright (C) 2017 VanillaNexus
->>>>>>> a8e177e... Config setting for default dialer app (1/2)
-
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
 
@@ -33,4 +27,26 @@
 	
     <string name="default_dialer_application" translatable="false">com.android.dialer</string>
 	
+    <!-- Does the notification LED support multiple colors -->
+    <bool name="config_multiColorNotificationLed">false</bool>
+
+    <!-- Is the battery LED intrusive? -->
+    <bool name="config_intrusiveBatteryLed">false</bool>
+
+    <!-- Does the battery LED support multiple colors? -->
+    <bool name="config_multiColorBatteryLed">false</bool>
+
+    <!-- Do the battery/notification LEDs support pulsing?
+         Used to decide if we show pulse settings -->
+    <bool name="config_ledCanPulse">true</bool>
+
+    <!-- Vibrator pattern for notifications while alerts
+         are disabled -->
+    <integer-array name="config_notificationNoAlertsVibePattern">
+        <item>0</item>
+        <item>50</item>
+        <item>100</item>
+        <item>50</item>
+    </integer-array>
+
 </resources>
