--- a/packages/SystemUI/res/values/vanilla_config.xml
+++ b/packages/SystemUI/res/values/vanilla_config.xml
@@ -17,4 +17,9 @@
 <resources>
     <!-- Allow Opa (Pixel navbar) layout -->
     <bool name="config_allowOpaLayout">true</bool>
+
+    <!-- Set to true to enable the classic notification ticker that scrolls
+         Notification.tickerText across the status bar for what seems like an
+         eternity. -->
+    <bool name="enable_ticker">true</bool>
 </resources>
