--- a/core/res/res/values/vanilla_config.xml
+++ b/core/res/res/values/vanilla_config.xml
@@ -53,4 +53,7 @@
         <item>50</item>
     </integer-array>
 
+    <!-- Quick settings tiles columns and rows config -->
+    <integer name="config_qs_num_rows_landscape_default">2</integer>
+
 </resources>
