--- a/core/res/res/values/vanilla_symbols.xml
+++ b/core/res/res/values/vanilla_symbols.xml
@@ -37,4 +37,6 @@
   <java-symbol type="string" name="reboot_confirm" />
   <java-symbol type="string" name="reboot_progress" />
 
+  <!-- Quick settings tiles columns and rows config -->
+  <java-symbol type="integer" name="config_qs_num_rows_landscape_default"/>
 </resources>
