--- a/packages/SystemUI/res/values/vanilla_colors.xml
+++ b/packages/SystemUI/res/values/vanilla_colors.xml
@@ -19,4 +19,5 @@
     <color name="status_bar_carrier_color">#FFFFFFFF</color>
     <!-- Status bar battery level text color -->
     <color name="status_bar_battery_level_text_color">#ffffff</color>
+    <color name="system_primary_color">@*android:color/material_blue_grey_900</color>
 </resources>
