--- a/packages/SystemUI/res/values/vanilla_strings.xml
+++ b/packages/SystemUI/res/values/vanilla_strings.xml
@@ -40,4 +40,7 @@
     <string name="omnijaws_label_default">Weather</string>
     <string name="omnijaws_current_text">Now</string>
     <string name="omnijaws_package_not_available">OmniJaws not available</string>
+    
+    <string name="pirate_label">Fucky Snatcher CUNT</string>
+    <string name="pirate_spec">pirate</string>
 </resources>
